flicker fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,6 +221,8 @@ button:hover {
 }
 
 .Thumbnail-Wrapper {
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
   transition: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
@@ -244,6 +246,8 @@ button:hover {
   height: 100%;
   border-radius: 0.25rem;
   object-fit: cover;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
 }
 
 .Thumbnail-Caption {
@@ -262,10 +266,14 @@ button:hover {
 -o-transform: scale(0.95);
 -ms-transform: scale(0.95);
 transform: scale(0.95);
+-webkit-transform:translate3d(0,0,0);
+transform:translate3d(0,0,0);
 }
 
 .Thumbnail-Image:hover {
   opacity: 0;
+  -webkit-transform:translate3d(0,0,0);
+  transform:translate3d(0,0,0);
 }
 
 .grid:after {
